hamburger nav added

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 
     <div class="wrapper">
         <header>
+            <i class="fas fa-bars fa-2x"></i>
+            <div class="logo">
+                <a href="#">room</a>
+            </div>
             <nav>
-                <a href="#" class="logo">room</a>
                 <a href="#" class="links">home</a>
                 <a href="#" class="links">shop</a>
                 <a href="#" class="links">about</a>
