--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
 
     <div class="wrapper">
         <header>
-            <i class="fas fa-bars fa-2x"></i>
+            <!-- <i class="fas fa-bars fa-2x"></i> -->
+            <div class="hamburger">
+                <div class="bar bar1"></div>
+                <div class="bar bar2"></div>
+                <div class="bar bar3"></div>
+            </div>
             <div class="logo">
                 <a href="#">room</a>
             </div>
