--- a/404.html
+++ b/404.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta http-equiv='refresh' content='0; URL=http://room.gavinpereira.in'>
 </head>
 
 <body>
-    Errorrrrrrr
+    <p>Click here if not redirected</p>
+    <a href="http://room.gavinpereira.in">REDIRECT</a>
 </body>
 
 </html>
