--- a/404.html
+++ b/404.html
@@ -6,12 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <meta http-equiv='refresh' content='0; URL=http://room.gavinpereira.in'>
 </head>
 
 <body>
     <p>Click here if not redirected</p>
     <a href="http://room.gavinpereira.in">REDIRECT</a>
+    <script>window.location.href = 'http:/room.gavinpereira.in';</script>
 </body>
+
+
 
 </html>
